--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index2.html">Home</a> <!-- Updated href -->
+                    <a class="nav-link" href="index.html">Home</a> <!-- Updated href -->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="schedule.html">Fall 2024 Schedules</a>
