--- a/views/index.html
+++ b/views/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="../resources/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <title>Minh Vo - Class of 2026</title>
 </head>
+
 <body class="p-3 mb-2 bg-light text-dark">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">   
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a> <!-- Updated href -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="schedule.html">Fall 2024 Schedules</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="hobbies.html">Hobbies</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div id="navbar-container"></div>
 
-    <h1>Through out heaven and earth</h1>
-    <p>I, alone, am the honored one</p> 
+    <h1 id="heading-id">Through out heaven and earth</h1>
+    <p>I, alone, am the honored one</p>
     <img src="../resources/img/gojo.jpeg" alt="An image of HIM" width="220px" class="rounded-pill" />
-    <a href="https://www1.villanova.edu/university/liberal-arts-sciences/programs/computing-sciences.html">Link to Villanova Computing Sciences Department</a>
+    <a href="https://www1.villanova.edu/university/liberal-arts-sciences/programs/computing-sciences.html">Link to
+        Villanova Computing Sciences Department</a>
+    
+    <button id="add-name">Add Your Name</button>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script src="../resources/js/navbar.js"></script>
+    <script src="../resources/js/name.js"></script>
+    <script>
+        loadNavbar(); // Call the function to load the navbar
+    </script>
 </body>
+
 </html>
